# dotex

./: .gitignore  README.md  install.sh  pyproject.toml
AI_Dev_Memory/: DEBUG_PLAYBOOK.md  PIPELINES_AND_INVARIANTS.md  README.md  STYLE_CAPTION_AND_XREF.md  ZOTERO_FIELD_COMPATIBILITY.md
dotex/: pyproject.toml
dotex/src/dotex/: cli.py  converter.py  docx_to_tex.py
examples/: roundtrip_workflow.md
src/dotex/: __init__.py  __main__.py  cli.py  converter.py  docx_inspector.py  docx_to_tex.py  inspect_docx.py  resolve_zotero.py  roundtrip_compare.py  tex_to_docx.py  zotero_import.py  zotero_resolver.py
src/dotex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dotex/templates/: default_reference.docx
tests/: test_cli.py  test_cross_references.py  test_docx_to_tex.py  test_postprocess_docx.py  test_style_cleanup.py  test_zotero_mode.py
