[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dotex"
version = "0.3"
description = "Reusable high-fidelity TeX to DOCX toolkit for manuscript workflows"
requires-python = ">=3.9"
dependencies = [
	"pypandoc>=1.12",
]

[project.scripts]
dotex = "dotex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
dotex = ["templates/*.docx"]

[tool.setuptools.packages.find]
where = ["src"]